--- a/Style.css
+++ b/Style.css
@@ -1,8 +1,35 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
-h1{text-align: center;background-color: lightgreen;padding: 20px;margin: 0px;}
-body{margin: 0px;} 
+#logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 50px;
+    width: 50px;
+    margin: 20px;
+}
+main h3 {
+    text-align: center;
+    font-size: 24px;
+    margin-top: 20px;
+    display: block;
+}
+main p {
+    text-align: center;
+    font-size: 18px;
+    margin: 20px;
+}
+main img {
+    display: block;
+    margin: 20px auto;
+    max-width: 20%;
+    height: auto;
+    border-radius: 10px;
+}
+h1{color: white;text-align: center;background-color: black;padding: 30px;margin: 0px;}
+#fit{color: #1c93cd;}
+body{margin: 0px; position: relative;} 
 .navbar ul {
     list-style-type: none;
     margin: 0;
@@ -27,4 +54,31 @@ body{margin: 0px;}
 .navbar a:hover {
     background-color: #111;
 }
-img {float:right;margin:10px;}
+img {clear:right;margin-left:120px;width: 500px;}
+.images {float: left;height: 375px;}
+.images:hover {transform: scale(1.1);box-shadow: 0 4px 16px rgba(0,0,0,0.3);transition: transform 0.3s, box-shadow 0.3s;}
+#div1{clear: both;}
+footer {
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 8px 0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    font-size: 16px;
+    z-index: 100;
+}
+
+.social-media a {
+    color: white;
+    margin: 0 10px;
+    font-size: 24px;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.social-media a:hover {
+    color: #1c93cd;
+}
