--- a/Style.css
+++ b/Style.css
@@ -47,14 +47,14 @@ body{margin: 0px; position: relative;}
     display: flex;
     color: white;
     text-align: center;
-    padding: 12px 126px;
+    padding: 12px 111px;
     text-decoration: none;
 }
 
 .navbar a:hover {
     background-color: #111;
 }
-img {clear:right;margin-left:120px;width: 500px;}
+img {clear:right;margin-left:100px;width: 450px;}
 .images {float: left;height: 375px; margin-top: 10px;}
 .images:hover {transform: scale(1.1);box-shadow: 0 4px 16px rgba(0,0,0,0.3);transition: transform 0.3s, box-shadow 0.3s;}
 #div1{clear: both;}
@@ -81,4 +81,55 @@ footer {
 
 .social-media a:hover {
     color: #1c93cd;
+}
+
+#Coaching {
+    float: right;
+    width: 900px;
+    height: 500px;
+    margin: 20px;
+}
+
+main ul {
+    float: right;
+    list-style:disc;
+    font-size:xx-large;
+    position: absolute;
+        left: 50px;
+    ;
+    
+}
+main ul li {
+    margin-bottom: 30px;
+    
+}
+#div2 {
+    clear: both;
+    text-align: center;
+    font-size: 20px;
+    margin: 20px;
+    font-weight:900;
+    font-style: italic;
+    
+}
+#contact-info {
+    text-align: left;
+    font-size: 18px;
+    margin-top: 20px;
+    font-weight: 600;
+    position: absolute;
+    left: 550px;
+        bottom: -10px; 
+    white-space: nowrap;
+}
+#p1 {
+    text-align: center;
+    font-size: 18px;
+    margin-top: 20px;
+    font-weight: 600;
+    display: block;
+        position: absolute;
+        left: 550px;
+        bottom: -300px;
+        
 }
