--- a/Style.css
+++ b/Style.css
@@ -63,17 +63,17 @@ footer {
     background-color: #333;
     color: white;
     text-align: center;
-    padding: 8px 0;
+    padding: 1px ;
     position: fixed;
     left: 0;
     bottom: 0;
-    font-size: 16px;
+    font-size: 12px;
     z-index: 100;
 }
 
 .social-media a {
     color: white;
-    margin: 0 10px;
+    margin: 0 5px;
     font-size: 24px;
     text-decoration: none;
     transition: color 0.3s;
