--- a/Styles/global.css
+++ b/Styles/global.css
@@ -12,6 +12,7 @@ body {
 main{
     width: 100%;
     height: 100%;
+    
 }
 #logo {
     position: absolute;
@@ -21,7 +22,8 @@ main{
     width: 50px;
     margin: 20px;
 }
-h1{color: white;text-align: center;background-color: black;padding: 30px;margin: 0px;}
+h1,h2{color: white;text-align: center;background-color: black;padding: 30px;margin: 0px;}
+h2 {margin-bottom: 16px ;}
 #fit{color: #1c93cd;}
 h3 {
     text-align: center;
@@ -36,29 +38,28 @@ p {
 }
 
 nav ul {
+    display: flex;
     list-style-type:  none;
     margin: 0;
     padding: 0;
     background-color: #333;
     
 }
-
+nav ul li{
+    padding: 12px 0;
+    flex: 1;
+    text-align: center;
+    transition: background-color 0.3s;
+}
 
 nav a {
-    display: flex;
     color: white;
-    padding: 12px 16px;
-    text-align: center;
-    justify-content: center;
+    
     text-decoration: none;
-    text-align: center;
-    flex-direction: column;
-    align-items: center;
-    transition: background-color 0.3s;
     
 }
 
-nav a:hover {
+nav ul li:hover {
     background-color: #111;
 }
 
@@ -96,5 +97,19 @@ main div button {
 }
 main div button:hover {
     background-color: #155d7a;
+}
+ img {
+    border: black 2px solid;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+ }
+ .image-container {width: 30%; height: 375px; }
+
+.images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
 }
  
