--- a/Styles/index.css
+++ b/Styles/index.css
@@ -5,11 +5,8 @@
     width: 15%;
     margin: 20px auto;
 }
- img {
-    border: black 2px solid;
- }
-.images {float: left;height: 375px; margin-top: 3%;margin-left: 10%;}
-.images:hover {transform: scale(1.1);box-shadow: 0 4px 16px rgba(0,0,0,0.3);transition: transform 0.3s, box-shadow 0.3s;}
+
+.image-container:hover {transform: scale(1.1);box-shadow: 0 4px 16px rgba(0,0,0,0.3);transition: transform 0.3s, box-shadow 0.3s;}
 
 .social-media a {
     color: white;
@@ -21,4 +18,8 @@
 
 .social-media a:hover {
     color: #1c93cd;
+}
+html {
+    margin-bottom: 100px;
+
 }
