--- a/Styles/workout.css
+++ b/Styles/workout.css
@@ -1,11 +1,15 @@
+main{
+    display: flex;
+    flex-direction: column;
 
-  .workout-container {
-            width: 100%;
-            margin: 20px auto;
-            overflow: hidden; 
+}
+
+.workout-container {
+            display: flex;
+            justify-content: space-between;
         }
 .workout-card {
-    float: left;
+    
     width: 28%;              
     margin: 20px 1.66%;       
     padding: 15px;
@@ -18,7 +22,7 @@
 .workout-card img {
     
     border-radius: 8px;
-    height: 100%;
+    height: 300px;
     width: 100%;
 }
 
