--- a/Styles/workout.css
+++ b/Styles/workout.css
@@ -11,7 +11,7 @@ main{
 .workout-card {
     
     width: 28%;              
-    margin: 20px 1.66%;       
+    margin: 20px;       
     padding: 15px;
     background: #fff;
     text-align: center;
