--- a/Styles/global.css
+++ b/Styles/global.css
@@ -1,19 +1,20 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
+
 body {
-  
-  padding: 0;
-  padding-bottom: 100px;
+    padding: 0;
+    padding-bottom: 100px;
     margin: 0;
     width: 100%;
     height: 100%;
 }
-main{
+
+main {
     width: 100%;
     height: 100%;
-    
 }
+
 #logo {
     position: absolute;
     top: 0;
@@ -22,15 +23,30 @@ main{
     width: 50px;
     margin: 20px;
 }
-h1,h2{color: white;text-align: center;background-color: black;padding: 30px;margin: 0px;}
-h2 {margin-bottom: 16px ;}
-#fit{color: #1c93cd;}
+
+h1, h2 {
+    color: white;
+    text-align: center;
+    background-color: black;
+    padding: 30px;
+    margin: 0px;
+}
+
+h2 {
+    margin-bottom: 16px;
+}
+
+#fit {
+    color: #1c93cd;
+}
+
 h3 {
     text-align: center;
     font-size: 24px;
     margin-top: 20px;
     display: block;
 }
+
 p {
     text-align: center;
     font-size: 18px;
@@ -39,13 +55,13 @@ p {
 
 nav ul {
     display: flex;
-    list-style-type:  none;
+    list-style-type: none;
     margin: 0;
     padding: 0;
     background-color: #333;
-    
 }
-nav ul li{
+
+nav ul li {
     padding: 12px 0;
     flex: 1;
     text-align: center;
@@ -54,9 +70,7 @@ nav ul li{
 
 nav a {
     color: white;
-    
     text-decoration: none;
-    
 }
 
 nav ul li:hover {
@@ -68,19 +82,21 @@ footer {
     background-color: #333;
     color: white;
     text-align: center;
-    padding: 1px ;
+    padding: 1px;
     position: fixed;
     left: 0;
     bottom: 0;
     font-size: 12px;
     z-index: 100;
 }
+
 main div h2 {
     text-align: center;
     font-size: 24px;
     margin-top: 20px;
     display: block;
 }
+
 main div button {
     display: block;
     margin: 20px auto;
@@ -93,18 +109,23 @@ main div button {
     cursor: pointer;
     transition: background-color 0.3s;
     text-decoration: none;
-    
 }
+
 main div button:hover {
     background-color: #155d7a;
 }
- img {
+
+img {
     border: black 2px solid;
     width: 100%;
     height: 100%;
     object-fit: cover;
- }
- .image-container {width: 30%; height: 375px; }
+}
+
+.image-container {
+    width: 30%;
+    height: 375px;
+}
 
 .images {
     display: flex;
@@ -112,4 +133,3 @@ main div button:hover {
     align-items: center;
     gap: 16px;
 }
- 
